# agentmesh

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
agentmesh/: __init__.py  cli.py  runtime.py  schema.py
docs/: architecture.md  roadmap.md  vision.md
docs/spec/: agentpod.md  agentset.md  controlplane.md  memoryvolume.md  toolmount.md  workflow.md
examples/customer-support-stack/: README.md
examples/local/: agentpod.json  agentset.json  memoryvolume.json  toolmount.json  workflow.json
tests/: test_cli.py
