[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmesh"
version = "0.1.0"
description = "Open orchestration infrastructure for AI agents."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "Jon Oringer" }
]
keywords = ["agents", "orchestration", "control-plane", "runtime"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
]

[project.scripts]
meshctl = "agentmesh.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["agentmesh*"]
